Cross Platform Fixes - Substantial image sizing and positioning improvements across all lesser browsers - Text rendering improvements in Firefox - Fixed Bigfoot button color in Firefox - Fixed logo rendering in Firefox - Project page rainbow theme now cross-platform - Fixed navigation item spacing to be uniform cross-platform
General
- Slightly tweaked header style

--- a/css/bigfoot-number.css
+++ b/css/bigfoot-number.css
@@ -11,7 +11,7 @@
 	border: none;
 	border-radius: 0.3em;
 	cursor: pointer;
-	background-color: #0AA0D2;
+	background-color: #0AA0D2 !important;
 	-webkit-backface-visibility: hidden;
 	-ms-backface-visibility: hidden;
 	backface-visibility: hidden;
